basic file download

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -22,4 +22,14 @@
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
+<script>
+    window.triggerFileDownload = (fileName, url) => {
+      const anchorElement = document.createElement('a');
+      anchorElement.href = url;
+      anchorElement.download = fileName ?? '';
+      anchorElement.click();
+      anchorElement.remove();
+    }
+ </script>
+
 </html>
